--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
-    "react": "^19.1.1",
-    "react-router-dom": "^6.24.1",
-    "express": "^5.1.0",
-    "dotenv": "^17.2.1",
-    "cors": "^2.8.5",
-    "mongoose": "^8.18.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
-    "process": "^0.11.10",
+    "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "path": "^0.12.7",
-    "cloudinary": "^2.7.0"
+    "process": "^0.11.10",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
